<resources>
    <string name="app_name">Walking Goals</string>
    <string name="addGoalActivityName">Create Goal</string>
    <string name="editGoalActivityName">Edit Goal</string>
    <string name="addProgressActivityName">Edit Goal</string>
    <string name="settings">Settings</string>

    <color name="grey">#d9d9db</color>
    <string name="goalsHeading">Today\'s goal</string>
    <string name="goalsHeading2">All goals</string>
    <string name="tab1">GOALS</string>
    <string name="tabTitle1">Goals</string>
    <string name="tab2">HISTORY</string>
    <string name="tabTitle2">History</string>
    <string name="tab3">STATISTICS</string>
    <string name="tabTitle3">Statistics</string>

    <string-array name="units_array">
        <item>Meters</item>
        <item>Kilometers</item>
        <item>Yards</item>
        <item>Feet</item>
        <item>Steps</item>
    </string-array>

    <string-array name="history_statistics_units_array">
        <item>Original units</item>
        <item>Meters</item>
        <item>Kilometers</item>
        <item>Yards</item>
        <item>Feet</item>
        <item>Steps</item>
    </string-array>

    <!--Goals popup Menu options-->
    <string name="popupSetGoalOption">Set as today\'s goal</string>
    <string name="popupEditOption">Edit</string>
    <string name="popupDeleteOption">Delete</string>

    <string name="goalExpired">Your Goal has Expired, please set another goal</string>


    <!--history-->

    <string-array name="viewArray">
        <item>Show all</item>
        <item>Week view</item>
        <item>Month view</item>
        <item>Custom range</item>
    </string-array>

    <string name="demo_min_label">0%</string>
    <string name="demo_max_label">100%</string>


    <!--preferences-->

    <string name="testModePrefCat">Test mode</string>
    <string name="stepsPrefCat">Steps</string>
    <string name="otherPrefCat">Other</string>

    <string name="editGoalsTitle">Edit goals</string>

    <string name="notificationsTitle">Notifications</string>


    <string name="stepCounterTitle">Step counter</string>

    <string name="testModeTitle">Test mode</string>
    <string name="testModeDate">Test mode date</string>
    <string name="testModeDateSummary">Specify current date for the app</string>

    <string name="presentationTitle">Default presentation units</string>
    <string name="presentationSummary">Display units for activity, history and statistics</string>
    <string name="presentationValueDefault">Original units</string>
    <string name="presentationDialogTitle">Default units</string>

    <string name="stepMappingTitle">Step length</string>
    <string name="stepMappingSummary">Distance covered by a single stride</string>
    <string name="stepMappingDialogTitle">Step length (m)</string>
    <string name="stepMappingValueDefault">0.762</string>

    <string name="clearHistoryTitle">Clear goal history</string>


    <string name="global_button_done">Done</string>
    <string name="global_button_cancel">Cancel</string>

</resources>
